# good_stuff

./: .gitignore  Cargo.toml
migrations/2022-10-03-143145_create_users/: up.sql
src/: lib.rs  main.rs  models.rs  routes.rs  schema.rs
src/forms/: mod.rs
src/routes/: home.rs
src/routes/home/: details.rs  scoped_home.rs
src/utils/: consts.rs
static/css/: board.css
static/js/: elements.js  game.js  logOutButton.js  logRegCommon.js  logRegFormCommon.js  logRegFormLogin.js  logRegFormRegister.js  officeQuotes.js  ptable.js
templates/: details.html  featurette.html  game.html  home.html  index.html  links.html  logReg.html  officeQuotes.html  ptable.html  skills.html
templates/components/: footer.html  navbar.html  page.html  pagination.html
