[package]
name = "good_stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-http = "3.2.2"
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = "4.2.1"
actix-web-lab = "0.18.3"
argon2 = "0.4.1"
chrono = { version = "0.4.22", features = ["serde"] }
diesel = { version = "2.0.0", features = ["postgres", "chrono", "serde_json"] }
dotenvy = "0.15.5"
env_logger = "0.9.1"
lazy_static = "1.4.0"
log = "0.4.17"
serde = { version = "1.0.145", features = ["serde_derive", "derive"] }
serde_json = "1.0.85"
tera = "1.17.1"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.16.0", features = ["validator_derive", "derive"] }
